--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
   ],
   "require": {
     "dompdf/dompdf": "^3.1",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "thiagoalessio/tesseract_ocr": "^2.13",
+    "smalot/pdfparser": "^2.12"
   }
 }
